remove unused imports, fix spring security vulnerability