@@ -5,8 +5,8 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @NoArgsConstructor
 @AllArgsConstructor
@@ -19,11 +19,11 @@ public class PersonResponse {
 
     public PersonResponse(Person person) {
         this.username = person.getUsername();
-        this.roles = person.getRoles().stream().map(role -> role.toString()).collect(Collectors.toList());
+        this.roles = person.getRoles().stream().map(Enum::toString).toList();
         this.email = person.getEmail();
     }
 
     public static List<PersonResponse> getPersonsFromEntities(List<Person> persons) {
-        return persons.stream().map(PersonResponse::new).collect(Collectors.toList());
+        return persons.stream().map(PersonResponse::new).toList();
     }
 }
